--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,9 @@ jobs:
         run: |
           pip install -r requirements.txt
           pip install ruff black bandit pytest
+      
+      - name: Install package
+        run: pip install -e .
 
       - name: Run ruff
         run: ruff check .
