--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,7 @@ jobs:
         run: |
           pip install -r requirements.txt
           pip install ruff black bandit pytest
+          pip install "black[jupyter]"
       
       - name: Install package
         run: pip install -e .
